# pacstack-wrappers

./: LICENSE  Makefile.am  README.md  configure.ac
include/: pacstack_wrappers.h
src/: Makemodule.am  pacstack_longjmp.c
tests/: Makemodule.am  test_longjmp.c
